--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,63 @@
 <main class="app-container"></main>
 <script>
   const $appContainer = document.querySelector('.app-container');
+  const renderMemeRoom = () => {
+    $appContainer.innerHTML = `
+      <video class="video" width="640" height="480"></video>
+      <canvas class="canvas" width="640" height="480"></canvas>
+      <input class="message" type="text" placeholder="Enter MEME Text">
+      <hr />
+      <h3>Images</h3>
+      <div class="imageContainer"></div>
+    `;
+    const videoElement = document.querySelector('.video');
+    const canvasElement = document.querySelector('.canvas');
+    const context = canvasElement.getContext('2d');
+    const message = document.querySelector('.message');
+    const imageContainer = document.querySelector('.imageContainer');
+
+    navigator.mediaDevices
+      .getUserMedia({
+        video: true, // webcam
+        audio: false, // microphone
+      })
+      .then((stream) => {
+        videoElement.srcObject = stream;
+        videoElement.play();
+        buttonElement.classList.remove('hidden');
+      });
+    $message.focus();
+    $message.addEventListener('keyup', (e) => {
+      if (e.key === 'Enter') {
+        const pngData = canvasElement.toDataURL();
+        const base64Data = pngData.replace(/^data:image\/png;base64,/, '');
+        fetch('/images', {
+          method: 'POST',
+          headers: {
+            'content-type': 'application/json',
+          },
+          body: JSON.stringify({
+            img: base64Data,
+            text: $message.value,
+            username: globalUsername,
+          }),
+        })
+          .then((r) => r.json())
+          .then((data) => {});
+      }
+    });
+  };
+
   const setupLogin = () => {
     $appContainer.innerHTML = `
       <h1>You must be logged in</h1>
       <input class="username" type="text" placeholder="username">
       <button class="submit">Submit</button>
+      <style>
+        .button.hidden {
+          display: none;
+        }
+      </style>
     `;
     const $username = document.querySelector('.username');
     const $submit = document.querySelector('.submit');
@@ -23,6 +75,7 @@
         }),
       })
         .then((response) => {
+          $username.value = '';
           if (response.status === 403) {
             window.alert('Username already exists, please enter a different username!');
             return;
@@ -32,13 +85,13 @@
         .then((body) => {
           if (body.username) {
             globalUsername = body.username;
-            render();
+            renderMemeRoom();
           }
         });
     });
   };
   const startApp = () => {
-    fetch('/cookie', { credentials: 'same-origin' })
+    fetch('/cookie')
       .then((r) => {
         console.log(r);
         if (r.status !== 200) {
@@ -49,7 +102,7 @@
       .then((body) => {
         if (body.username) {
           globalUsername = body.username;
-          return render();
+          return renderMemeRoom();
         }
       });
   };
