basic meme chat

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
           },
           body: JSON.stringify({
             img: base64Data,
-            text: $message.value,
+            text: message.value,
             username: globalUsername,
           }),
         })
